--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,8 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+application.properties
+
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
