--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,13 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.5'
 
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+
+
+
 
 }
 
