--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,6 +16,14 @@ services:
       - "3307:3306"
     networks:
       - online_network
+  redis:
+    image: redis:latest
+    container_name: redis-practice
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis-config:/usr/local/etc/redis
+    command: redis-server /usr/local/etc/redis/redis.conf
 
 volumes:
   mysql_data:
