--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,11 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
-	// redis 의존성
+	// Redis 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// Swagger 의존성
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
 }
 
