--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,10 +5,10 @@ services: # 하나의 컨테이너, 여러개가 생길 수 있다.
     image: mysql:8.0 # 이미지
     container_name: online_bookstore # 컨테이너 이름
     environment: # 환경변수
-      MYSQL_ROOT_PASSWORD: 1q2w3e4r
+      MYSQL_ROOT_PASSWORD: Jeong88!!
       MYSQL_DATABASE: bookStore
       MYSQL_USER: admin
-      MYSQL_PASSWORD: 1q2w3e4r
+      MYSQL_PASSWORD: Jeong88!!
     volumes:
       - mysql_data:/var/lib/mysql  # MySQL 데이터 저장 볼륨
       - ./my.cnf:/etc/mysql/conf.d/my.cnf  # MySQL UTF-8 설정 파일
